Screen overflow bug fixed and complete style with css

--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 * {
     box-sizing: border-box;
-    /*border: 1px dotted red;*/
 }
 
 body,
@@ -11,15 +10,14 @@ html {
     height: 100%;
     justify-content: center;
     align-items: center;
+    background: orange;
 }
 
 .calculatorContainer {
     display: flex;
     flex-flow: column nowrap;
-    flex: auto;
     justify-content: space-evenly;
     align-items: center;
-    border: 2px solid black;
     width: 300px;
     height: 450px;
     max-width: 300px;
@@ -27,25 +25,30 @@ html {
     padding: 25px;
     margin: 0;
     gap: 10px;
+    background: rgb(255, 255, 255);
+    border-radius: 25px;
 }
 
 .screen {
     display: flex;
     justify-content: end;
     align-items: center;
-    border: 2px solid #333;
     width: 250px;
     height: 65px;
+    background: #555;
+    border-radius: 15px;
 }
 
 p {
     margin-right: 15px;
+    color: white;
+    font-size: 30px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 
 .buttonsContainer {
     display: flex;
     flex-flow: column nowrap;
-    flex: 1 1 0;
     justify-content: space-between;
     align-items: center;
     width: 250px;
@@ -58,13 +61,33 @@ p {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex: 1 1 0;
     width: 250px;
 }
 
 button {
     width: 55px;
     height: 55px;
+    border: none;
+    border-radius: 100%;
+    font-size: 25px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+.digitButton {
+    background: #d3d3d3;
+    color: #333;
+}
+
+.operatorButton,
+.dotButton {
+    background: #777;
+    color: white;
+}
+
+.equalButton {
+    background: orange;
+    color: white;
+    font-weight: bolder;
 }
 
 .eraserButtons {
@@ -73,7 +96,43 @@ button {
     width: 250px;
 }
 
-#clearButton {
+.eraserButtons button {
     width: 55px;
     height: 55px;
+    background: tomato;
+    color: white;
+}
+
+#deleteButton {
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+#clearButton {
+    font-weight: bolder;
+}
+
+.firstRow .button4 {
+    font-size: 40px;
+}
+
+.secondRow .button4 {
+    font-size: 40px;
+}
+
+.thirdRow .button4 {
+    font-size: 23px;
+    font-weight: bolder;
+}
+.fourthRow .button2 {
+    font-size: 35px;
+    font-weight: bolder;
+}
+
+.fourthRow .button3 {
+    font-size: 35px;
+}
+
+.fourthRow .button4 {
+    font-size: 40px;
 }
